# catalytic-earth

./: .gitignore  README.md  pyproject.toml
artifacts/: mcsa_sample.json  mechanism_demo.json  perf_report.json  perf_report_1000.json  perf_report_1025.json  perf_report_775.json  perf_report_850.json  perf_report_875.json  perf_report_900.json  perf_report_925.json  perf_report_950.json  perf_report_975.json  rhea_sample.json  seed_graph.json  source_ledger.json  v1_graph.json  v1_graph_100.json  v1_graph_125.json  v1_graph_150.json  v1_graph_75.json  v1_graph_summary.json  v1_graph_summary_100.json  v1_graph_summary_1000.json  v1_graph_summary_1025.json  v1_graph_summary_125.json  v1_graph_summary_150.json  v1_graph_summary_175.json  v1_graph_summary_200.json  v1_graph_summary_225.json  v1_graph_summary_250.json  v1_graph_summary_275.json  v1_graph_summary_300.json  v1_graph_summary_325.json  v1_graph_summary_350.json  v1_graph_summary_375.json  v1_graph_summary_400.json  v1_graph_summary_425.json  v1_graph_summary_450.json  v1_graph_summary_475.json  v1_graph_summary_500.json  (+1678 more)
docs/: artifact_storage.md  external_source_transfer.md  geometry_features.md  graph_schema.md  ingestion_plan.md  label_factory.md  mechanism_fingerprint.md  performance.md  research_program.md  safety_scope.md  v0_protocol.md  v2_report.md  v2_strengthening_report.md
tests/: test_adapters.py  test_artifact_storage.py  test_automation.py  test_cli.py  test_external_structural_holdout_artifact.py  test_fingerprints.py  test_generalization.py  test_geometry_artifact_regression.py  test_graph.py  (+15 more)
(+719 files in other folders)
